--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
+    "prepare": "node -e \"try{require('husky').install()}catch(e){}\" || true",
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
