--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# large video files
+*.MOV
+*.mov
+public/Project files/**/*.MOV
+public/Project files/**/*.mov
+
